--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,6 +4,7 @@ on: [push]
 
 jobs:
   build:
-    runs-on: [self-hosted, ubuntu-fargate-small]
+    # runs-on: [self-hosted, ubuntu-fargate-small]
+    runs-on: ubuntu-latest-4-cores
     steps:
       - run: echo "test"
