--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -4,7 +4,7 @@ on: [push, pull_request]
 
 jobs:
   build:
-    # runs-on: [self-hosted, ubuntu-fargate-small]
-    runs-on: ubuntu-latest-4-cores
+    runs-on: [self-hosted, ubuntu-fargate-small]
+    # runs-on: ubuntu-latest-4-cores
     steps:
       - run: echo "test"
